--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,7 @@ h2 {
     display: grid;
     grid-template-columns: 1fr 5fr;
     grid-template-rows: 1fr 5fr;
+    height: 100vh;
 }
 
 .header {
